objects/DML__c.object
<CustomObject>
    <fields>
        <fullName>Adjacency_1_Sales__c</fullName>
        <description>The Sales for the Office Products Adjacency.</description>
        <label>Office Products Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjacency_1__c</fullName>
        <description>The top adjacency for a dml by spend.</description>
        <label>Primary Adjacency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Adjacency_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adjacency_2_Sales__c</fullName>
        <description>The sales for CBFS Adjacency.</description>
        <label>CBFS Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjacency_2__c</fullName>
        <description>The second adjacency by spend.</description>
        <label>Secondary Adjacency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Adjacency_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adjacency_3_Sales__c</fullName>
        <description>The sales for the Furniture Adjacency.</description>
        <label>Furniture Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjacency_3__c</fullName>
        <description>The third largest adjacency by spend.</description>
        <label>Tertiary Adjacency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Adjacency_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_DML__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Suggested Alternate DML</label>
        <referenceTo>Alternate_DML__c</referenceTo>
        <relationshipLabel>DML</relationshipLabel>
        <relationshipName>DML</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DECISION_MAKER_ID__c</fullName>
        <externalId>true</externalId>
        <label>Decision Maker Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DECISION_MAKER_LEVEL_CD__c</fullName>
        <label>Decision Maker Level Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DECISION_MAKER_NM__c</fullName>
        <externalId>true</externalId>
        <label>DML Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DECISION_MAKER_SEGMENT_CD__c</fullName>
        <formula>Case(DECISION_MAKER_SEGMENT__c, 
&quot;Federal&quot;, &quot;GF&quot;, 
&quot;State&quot;, &quot;GS&quot;, 
&quot;Local&quot;, &quot;GL&quot;, 
&quot;Higher-Ed&quot;,&quot;EH&quot;, 
&quot;Higher Education&quot;,&quot;EH&quot;, 
&quot;K-12&quot;,&quot;EK&quot;,  
&quot;Small &lt; $10K&quot;, &quot;SM&quot;, 
&quot;Small $10K-$75K&quot;, &quot;IS&quot;, 
&quot;Medium $75K-$150K&quot;, &quot;MD&quot;, 
&quot;Standard $150K-$250K&quot;, &quot;LS&quot;, 
&quot;Key $250K-$500K&quot;, &quot;LK&quot;, 
&quot;Major $500K-$1M&quot;, &quot;LM&quot;, 
&quot;Enterprise $1M+&quot;,&quot;GB&quot;,&quot;OT&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DML Segment Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DECISION_MAKER_SEGMENT__c</fullName>
        <label>DML Segment Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small &lt; $10K</fullName>
                </value>
                <value>
                    <fullName>Small $10K-$75K</fullName>
                </value>
                <value>
                    <fullName>Medium $75K-$150K</fullName>
                </value>
                <value>
                    <fullName>Standard $150K-$250K</fullName>
                </value>
                <value>
                    <fullName>Key $250K-$500K</fullName>
                </value>
                <value>
                    <fullName>Major $500K-$1M</fullName>
                </value>
                <value>
                    <fullName>K-12</fullName>
                </value>
                <value>
                    <fullName>Higher-Ed</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Enterprise $1M+</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DECISION_MAKER_TEAMING_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DML Teaming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DECISION_MAKER_ZIP_CD__c</fullName>
        <label>DML Zip Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML_City__c</fullName>
        <label>DML City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML_Details__c</fullName>
        <formula>DECISION_MAKER_NM__c +  DECISION_MAKER_ZIP_CD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DML Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML_Director_ID__c</fullName>
        <label>DML Director ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML_Level_2_Manager__c</fullName>
        <description>Gets first and last name of the associated sales rep</description>
        <formula>Decision_Maker_Rep__r.User__r.Manager.Manager.FirstName + &apos; &apos; + Decision_Maker_Rep__r.User__r.Manager.Manager.LastName</formula>
        <label>DML Level 2 Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML_Level_3_Manager__c</fullName>
        <formula>Decision_Maker_Rep__r.User__r.Manager.Manager.Manager.FirstName + &apos; &apos; + Decision_Maker_Rep__r.User__r.Manager.Manager.Manager.LastName</formula>
        <label>DML Level 3 Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML_Sales_Rep_EmpID__c</fullName>
        <formula>Decision_Maker_Rep__r.User__r.OD_Employee_ID__c</formula>
        <label>DML Sales Rep EmpID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML_State__c</fullName>
        <label>DML State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML_Street__c</fullName>
        <label>DML Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML_Teaming_Rep_Name__c</fullName>
        <formula>DML_Teaming_Sales_ID__r.User__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DML Teaming Rep Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML_Teaming_Sales_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DML Teaming Rep ID</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Sales_Person__c.IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sales_Person__c</referenceTo>
        <relationshipLabel>DML (DML Teaming Sales ID)</relationshipLabel>
        <relationshipName>DML</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DUNS_Name__c</fullName>
        <description>The name of the org as known by D&amp;B</description>
        <label>DUNS Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <label>DUNS Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Maker_Director_Id__c</fullName>
        <formula>Decision_Maker_Rep__r.User__r.Manager.FirstName + &apos; &apos; + Decision_Maker_Rep__r.User__r.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DML Level 1 Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Maker_Director__c</fullName>
        <formula>Decision_Maker_Rep__r.User_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Maker Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Maker_Rep_Id__c</fullName>
        <formula>Decision_Maker_Rep__r.ExtIDSalesPerson__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Maker Rep Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Maker_Rep_Name__c</fullName>
        <formula>Decision_Maker_Rep__r.User__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DML Sales Rep Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Maker_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DML Sales Rep ID</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Sales_Person__c.IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sales_Person__c</referenceTo>
        <relationshipLabel>DMLs</relationshipLabel>
        <relationshipName>DMLs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Count__c</fullName>
        <description>The number of employees who work at the site.</description>
        <label>Employee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Level_Industry__c</fullName>
        <description>The high level industry grouping of the low-level industry as specified by SBI.</description>
        <label>High Level Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Accomodation and Food Services</fullName>
                </value>
                <value>
                    <fullName>Agriculture, Forestry, Fishing, and Hunting</fullName>
                </value>
                <value>
                    <fullName>Arts, Entertainment, and Recreation</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Educational Services</fullName>
                </value>
                <value>
                    <fullName>Finance and Insurance</fullName>
                </value>
                <value>
                    <fullName>Health Care and Social Assistance</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Management of Companies and Enterprises</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Nonclassifiable Establishments</fullName>
                </value>
                <value>
                    <fullName>Other Services (except Public Administration)</fullName>
                </value>
                <value>
                    <fullName>Professional, Scientific, and Technical Services</fullName>
                </value>
                <value>
                    <fullName>Public Administration</fullName>
                </value>
                <value>
                    <fullName>Real Estate Rental and Leasing</fullName>
                </value>
                <value>
                    <fullName>Retail Trade</fullName>
                </value>
                <value>
                    <fullName>Transportation and Warehousing</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Wholesale Trade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Low_Level_Industry__c</fullName>
        <description>The low level industry from DNB augmented by SBI</description>
        <label>Low Level Industry</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_DML_Name__c</fullName>
        <formula>Master_DML__r.DECISION_MAKER_NM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master DML Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_DML__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master DML ID</label>
        <referenceTo>DML__c</referenceTo>
        <relationshipLabel>DMLs</relationshipLabel>
        <relationshipName>DMLs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NewRequest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Deployment Exception/Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>DML</relationshipLabel>
        <relationshipName>DML</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Potential_1__c</fullName>
        <description>DML Potential Office Products</description>
        <label>Office Products Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_2__c</fullName>
        <description>DML Potential for CBFS</description>
        <label>CBFS Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_3__c</fullName>
        <description>DML Potential for Furniture</description>
        <label>Furniture Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProcessNew_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProcessNew Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposed_DML_Sales_Rep_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposed DML Sales Rep ID</label>
        <referenceTo>Sales_Person__c</referenceTo>
        <relationshipLabel>DML (Proposed DML Sales Rep ID)</relationshipLabel>
        <relationshipName>DML1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_DML_Teaming_Rep_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposed DML Teaming Rep ID</label>
        <referenceTo>Sales_Person__c</referenceTo>
        <relationshipLabel>DML (Proposed DML Teaming Rep ID)</relationshipLabel>
        <relationshipName>DML2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Effective_Start_Date__c</fullName>
        <label>Proposed Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Segment__c</fullName>
        <label>Proposed Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small $10K-$75K</fullName>
                </value>
                <value>
                    <fullName>Small &lt; $10K</fullName>
                </value>
                <value>
                    <fullName>Medium $75K-$150K</fullName>
                </value>
                <value>
                    <fullName>Standard $150K-$250K</fullName>
                </value>
                <value>
                    <fullName>Key $250K-$500K</fullName>
                </value>
                <value>
                    <fullName>Major $500K-$1M</fullName>
                </value>
                <value>
                    <fullName>K-12</fullName>
                </value>
                <value>
                    <fullName>Higher-Ed</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Enterprise $1M+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Creation__c</fullName>
        <label>Reason for Creation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Picklist1</fullName>
                </value>
                <value>
                    <fullName>Picklist2</fullName>
                </value>
                <value>
                    <fullName>Picklist3</fullName>
                </value>
                <value>
                    <fullName>Picklist4</fullName>
                </value>
                <value>
                    <fullName>Picklist5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remaining_Potential_1__c</fullName>
        <description>Remaining Potential for Office Products. Potential - Sales</description>
        <formula>IF((Potential_1__c -  Adjacency_1_Sales__c &gt; 0), Potential_1__c -  Adjacency_1_Sales__c, 0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Remaining Potential for Office Products.</inlineHelpText>
        <label>Office Products Remaining Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Potential_2__c</fullName>
        <description>Remaining Potential for CBFS. Potential - Sales</description>
        <formula>IF((Potential_2__c -  Adjacency_2_Sales__c &gt; 0), Potential_2__c -  Adjacency_2_Sales__c, 0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Remaining Potential for CBFS.</inlineHelpText>
        <label>CBFS Remaining Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Potential_3__c</fullName>
        <description>Remaining Potential for Furniture Products. Potential - Sales</description>
        <formula>IF((Potential_3__c -  Adjacency_3_Sales__c &gt; 0), Potential_3__c -  Adjacency_3_Sales__c, 0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Remaining Potential for Furniture Products.</inlineHelpText>
        <label>Furniture Remaining Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SPM_Name__c</fullName>
        <description>Strategic Partnership Manager Name</description>
        <label>SPM Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPM_Sales_ID__c</fullName>
        <description>Strategic Partnership Manager Sales ID</description>
        <label>SPM Sales ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_ID_Temp__c</fullName>
        <label>Sales ID Temp</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Model__c</fullName>
        <description>The segment produced by the model.</description>
        <label>Segment Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DML_Segments</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment_Override_Reason__c</fullName>
        <label>Segment Override Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Exception</fullName>
                </value>
                <value>
                    <fullName>Rep Input</fullName>
                </value>
                <value>
                    <fullName>Bad Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment_Override__c</fullName>
        <description>The Segment Override provided by Deployment team.</description>
        <label>Segment Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Adjacency_Override</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selling_Motion__c</fullName>
        <label>Selling Motion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retain</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Expand</fullName>
                </value>
                <value>
                    <fullName>Opportunistic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TGS_Segment__c</fullName>
        <description>If the Segment Override is populated, use that value, otherwise, use the value Segment Model.</description>
        <formula>IF(NOT(ISBLANK(TEXT(Segment_Override__c ))), TEXT(Segment_Override__c),  TEXT(Segment_Model__c) )</formula>
        <label>TGS Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Potential__c</fullName>
        <description>The total product potential.</description>
        <formula>Potential_2__c + Potential_5__c + Potential_3__c + Potential_1__c + Potential_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total product potential.</inlineHelpText>
        <label>Total Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Remaining_Potential__c</fullName>
        <description>Total Potential - Total Sales</description>
        <formula>IF((Total_Potential__c - Total_Sales__c &gt; 0), Total_Potential__c - Total_Sales__c, 0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Potential - Total Sales</inlineHelpText>
        <label>Total Remaining Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Sales__c</fullName>
        <description>The total DML sales</description>
        <formula>Adjacency_2_Sales__c + Adjacency_5_Sales__c + Adjacency_3_Sales__c + Adjacency_1_Sales__c + Adjacency_4_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total DML sales</inlineHelpText>
        <label>Total Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <description>Date of last sales potential calculation.</description>
        <inlineHelpText>Date of last sales potential calculation.</inlineHelpText>
        <label>Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>length_field__c</fullName>
        <formula>LEN( DECISION_MAKER_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>length (field)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>reporting_Master_DML_ID__c</fullName>
        <formula>BLANKVALUE( Master_DML__r.Name ,  Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Master DML ID</label>
        <type>Text</type>
    </fields>
    <label>DML</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DECISION_MAKER_NM__c</columns>
        <columns>DECISION_MAKER_ID__c</columns>
        <columns>Decision_Maker_Rep__c</columns>
        <columns>Decision_Maker_Rep_Name__c</columns>
        <columns>Decision_Maker_Director_Id__c</columns>
        <columns>DECISION_MAKER_TEAMING_IND__c</columns>
        <columns>DML_Teaming_Sales_ID__c</columns>
        <columns>DML_Teaming_Rep_Name__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>DML-0063627</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DML-{0000000}</displayFormat>
        <label>DML ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DML</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DML_Name_Character_Limit</fullName>
        <active>true</active>
        <description>This validation rule is to limit the character number for the DML name up to 80.</description>
        <errorConditionFormula>LEN(DECISION_MAKER_NM__c) &gt; 80</errorConditionFormula>
        <errorDisplayField>DECISION_MAKER_NM__c</errorDisplayField>
        <errorMessage>DML Name cannot exceed 80 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Effective_End_Date_validation</fullName>
        <active>true</active>
        <errorConditionFormula>(Effective_End_Date__c &lt;today()&amp;&amp;   ISBLANK(Effective_Start_Date__c ))|| Effective_End_Date__c &lt; (Effective_Start_Date__c)</errorConditionFormula>
        <errorMessage>Effective End Date should be greater than Effective Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Effective_Start_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Effective_Start_Date__c) &amp;&amp; ISBLANK(Effective_End_Date__c)</errorConditionFormula>
        <errorMessage>Effective Start Date is required.</errorMessage>
    </validationRules>
</CustomObject>